Fixed mobile view text alignment

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -33,7 +33,7 @@ content.product {
 
     @media screen and (max-width: 600px) {
       width: 80%;
-      float: left;
+      float: right;
       padding-right: 5%;
       margin-bottom: 5%;
     }
